--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: 'Mochiy Pop One';
 }
 
@@ -12,7 +13,7 @@ section{
     align-items: center;
     min-height: 100vh;
     width: 100%;
-    background: url(/images/wallpaperflare.com_wallpaper.jpg)no-repeat;
+    background: url(/images/wallpaperflare.com_wallpaper2.jpg)no-repeat;
     background-position: center;
     background-size: cover;
 }
@@ -52,7 +53,7 @@ h2{
     color: #ffff;
     font-size: 1em;
     pointer-events: none;
-    transition: .6s;
+    transition: .3s;
 }
 
 input:focus ~ label,
@@ -100,7 +101,7 @@ input:valid ~ label{
     color: azure;
 }
 
-button{
+.Log{
     width: 100%;
     height: 40px;
     border-radius: 40px;
@@ -129,4 +130,48 @@ button{
 .register p a:hover{
     text-decoration: underline;
     color: azure;
+}
+
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 100px;
+    background: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+.Home{
+    font-size: 32px;
+    color: white;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+.navbar a{
+    position: relative;
+    font-size: 18px;
+    color: #ffff;
+    font-weight: 500;
+    text-decoration: none;
+    margin-left: 40px;
+}
+
+.navbar a::before{
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: #ffff;
+    transition: 0.3s;
+}
+
+.navbar a:hover::before{
+    width: 100%;
 }
